파이어 베이스 로그인 기능 추가 - (껍떼기만 들음, 내용, 이동이 안됨) node.js 버전을 18로 올렸음 **중요 : 기존 도커 컨테이너, 이미지, 볼륨을 삭제 하고 다시 docker compose build, docker compose up을 할 것 리액트 안 쓸거 같음 - 하다가 개빡쳐서 지웠음 그냥 상남자 코딩 -node.js 버전을 할거 같아요 현재 파이버 베이스 연결 되어 있어서 나중에 배포도 이걸로 가능합니다. api키 제 껄로 해놨는데 뭐 어드민 키는 저 혼자 가지고 있겠습니다.

--- a/node_wsp_team1/docker-compose.yml
+++ b/node_wsp_team1/docker-compose.yml
@@ -1,12 +1,11 @@
-version: "3.9"
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
-      - "3000:3000" # 로컬 포트 3000과 컨테이너 포트 3000 연결
+      - "3000:3000"
+    environment:
+      - PORT=3000
     volumes:
-      - .:/app # 로컬 폴더를 컨테이너와 연결 (코드 변경 자동 반영)
-      - /app/node_modules # node_modules는 컨테이너 내부에서만 유지
-    command: ["npx", "nodemon", "index.js"] # nodemon으로 서버 실행
+      - .:/usr/src/app
+      - ./serviceAccountKey.json:/usr/src/app/serviceAccountKey.json
+    command: node app.js
