--- a/node_wsp_team1/package.json
+++ b/node_wsp_team1/package.json
@@ -1,16 +1,19 @@
 {
   "name": "node_wsp_team1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
