--- a/node_wsp_team1/docker-compose.yml
+++ b/node_wsp_team1/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - PORT=3000
     volumes:
-      - .:/usr/src/app
-      - ./serviceAccountKey.json:/usr/src/app/serviceAccountKey.json
+      - .:/app
+      - /app/node_modules
+      - ./serviceAccountKey.json:/app/serviceAccountKey.json
     command: node app.js
