db 유저 정보 등록 까지 완성 코드에 대한 이해 부탁 드립니다.

--- a/node_wsp_team1/docker-compose.yml
+++ b/node_wsp_team1/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-      - ./serviceAccountKey.json:/app/serviceAccountKey.json
+      # - ./serviceAccountKey.json을 따로 배포, node_wsp_team1 폴더에 넣어놓기
     command: node app.js
