--- a/node_wsp_team1/package.json
+++ b/node_wsp_team1/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
