--- a/node_wsp_team1/docker-compose.yml
+++ b/node_wsp_team1/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - NODE_ENV=production
       - PORT=3000
     volumes:
       - .:/app
