--- a/node_wsp_team1/package.json
+++ b/node_wsp_team1/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
     "google-tts-api": "^0.0.6"
